--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    <meta name="google-site-verification" content="hyTtoqiUdu7OSYpHlvF8CEyVVjiKFlg10Io_QOndHXY" />
   </head>
 
   <body>
