--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@ layout: compress
 <html lang="{{ site.locale | slice: 0,2 }}" class="no-js">
   <head>
     {% include head.html %}
+    {% seo %}
     {% include head/custom.html %}
     <meta name="google-site-verification" content="hyTtoqiUdu7OSYpHlvF8CEyVVjiKFlg10Io_QOndHXY" />
   </head>
