--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -82,7 +82,8 @@
   }
 
   img {
-    max-width: 200px;
+    max-width: 175px;
+    border-radius: 0%;
 
     @include breakpoint($large) {
       padding: 5px;
